turtleart.lessons.turtleart.Main.CircleTen.scala.error
Source:10: error: ')' expected but ';' found.
			droite((360.0/10*i);
                                           ^